Alterações visuais no código pai
Alterações:

*NO HTML*
- Reduzi as linhas um pouco
- Coloquei um favicon
- Adicionei a imagem de fundo de uma pokebola para deixar mais parecido com o modelo usado de inspiração

*NO JS*
- MAIN.JS:
        - Utilizei o querySelector, que julgo ser mais profissional que o GetElementById e commitei a função de limitar à primeira geração, uma vez que não estava funcionando pra mim...

- POKE-API.JS:
        - Utilizei uma imagem melhor
        - Corrigi o nome da função "...nexT"

*NO CSS*
- Variáveis com as cores de cada tipagem de pokemon foram criadas, vizando maior facilidade de adição de futuras feats.
- Padronização do tamanho do font-size de todo o projetos. Isso faz com que seja mais fácil de usar a medida REM.
- Adicionei mais @mediaqueries e aprimorei a responsividade do projeto, mudando o tamanho de alguns elementos nas MQs. Além de organizá-las reunindo-as no fim do arquivo "pokedex.css"

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,35 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    
+    --cor-dex-number: #00000042;
+    --bug: #91c12f;
+    --dark: #5a5465;
+    --dragon: #0b6dc3;
+    --electric: #f4d23c;
+    --fairy: #ec8fe6;
+    --fighting: #ce416b;
+    --fire: #ff9d55;
+    --flying: #89aae3;
+    --ghost: #655bbb;
+    --grass: #63bc5a;
+    --ground: #d97845;
+    --ice: #73cec0;
+    --normal: #919aa2;
+    --poison: #b567ce;
+    --psychic: #fa7179;
+    --rock: #c5b78c;
+    --steel: #5a8ea2;
+    --water: #5090d6;
 }
 
-body {
-    background-color: #f6f8fc;
+html{
+    font-size: 62.5%;
+    font-weight: 400;
 }
 
-.content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
-}
+body{
+    font-size: 16px;
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+    background-color: #ebebeb;
 }
