--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -15,11 +15,13 @@
     flex-direction: column;
 }
 
-.pokemon .nunber{
+.pokemon .number{
     color: #00000077;
     text-align: right;
     padding: .25rem 1rem;
     font-size: .625rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .pokemon .name{
@@ -30,7 +32,7 @@
     text-transform: capitalize;
 }
 
-.pokemon .detail{
+.pokemon  .detail{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -55,12 +57,12 @@
 }
 
 .pokemon .detail img{
-    max-width: 100%;
-    height: 4.5rem;
+    max-width: 70%;
+    height: 7rem;
     padding: 0.3em;
 }
 
-.paginacao{
+.pagination{
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -69,7 +71,7 @@
       padding: 1rem;
 }
 
-.paginacao button{
+.pagination #loadMoreButton{
    background: #6c79db;
    border: none;
    border-radius: 1rem;
